# thea

./: README.md  pyproject.toml  requirements.txt  thea
_vendor/CherryPy-18.1.2.dist-info/: RECORD
_vendor/Flask-1.0.3.dist-info/: RECORD
_vendor/Jinja2-3.0.3.dist-info/: RECORD
_vendor/MarkupSafe-2.0.1.dist-info/: RECORD
_vendor/Werkzeug-2.0.2.dist-info/: RECORD
_vendor/chardet-3.0.4.dist-info/: RECORD
_vendor/cheroot-8.6.0.dist-info/: RECORD
_vendor/click-8.0.3.dist-info/: RECORD
_vendor/idna-2.8.dist-info/: RECORD
_vendor/itsdangerous-2.0.1.dist-info/: RECORD
_vendor/jaraco.functools-3.5.0.dist-info/: RECORD
_vendor/more_itertools-8.12.0.dist-info/: RECORD
_vendor/portend-3.1.0.dist-info/: RECORD
_vendor/pyspellchecker-0.6.2.dist-info/: RECORD
_vendor/pytz-2021.3.dist-info/: RECORD
_vendor/requests-2.22.0.dist-info/: RECORD
_vendor/setuptools-60.3.1.dist-info/: RECORD
_vendor/tempora-4.1.2.dist-info/: RECORD
_vendor/urllib3-1.25.11.dist-info/: RECORD
_vendor/zc.lockfile-2.0.dist-info/: RECORD
app/: app.py  wsgi.py
app/static/: stylesheet.css
app/templates/: index.html
src/thea/: __init__.py  __main__.py  app.py
src/thea/templates/: index.html
